code/typescript/RealTimeTimeSeries/v3/docs/InlineResponse20010Data.md
# realtimetimeseries.InlineResponse20010Data

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**idNotation** | **String** | MDG identifier of the listing. | [optional] 
**sourceIdentifier** | **String** | Identifier used in the request. | [optional] 
**range** | [**InlineResponse2004DataRange**](InlineResponse2004DataRange.md) |  | [optional] 
**quality** | **String** | Quality of the price. | [optional] 
**subsamples** | [**[InlineResponse20010DataSubsamples]**](InlineResponse20010DataSubsamples.md) | List of summary records. For the attributes first, last, low, high, see attribute &#x60;valueUnit&#x60; in endpoint &#x60;/prices/get&#x60; for their unit, except for price type yield, where the &#x60;valueUnit&#x60; is always &#x60;percent&#x60; (id&#x3D;258). | [optional] 



## Enum: QualityEnum


* `RLT` (value: `"RLT"`)

* `DLY` (value: `"DLY"`)




